# iterm-simulator

./: pyproject.toml  simulate.py
examples/: bbc.md  dynamic-column-selection-duckdb.md  few-shot.md  http.md  llama.md  ollama.md
tests/: test_compare.py  test_parse_commands.py
