[tool.poetry]
name = "iterm-simulator"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "^23.2.1"
install = "^1.3.5"
iterm2 = "^2.7"
markdown-it-py = "^3.0.0"
pyparsing = "^3.1.1"
click = "^8.1.7"
pytest = "^7.4.2"
pyautogui = "^0.9.54"
rubicon-objc = "^0.4.7"
pyperclip = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
